<resources>
    <string name="app_name">sokies</string>
    <string name="hint_email">      Enter Your email</string>
    <string name="hint_password">   Enter Password</string>
    <string name="hint_empty">This field cannot be blank</string>
    <string name="error_email">Please enter a valid email</string>


    <string name="hint_gears"> Size of Gears/Boxes*</string>
    <string name="hint_drawing"> Drawing Number*</string>
    <string name="hint_typegear"> Type_gear_box*</string>
    <string name="hint_balance"> Balance Quantity*</string>
    <string name="hint_deliver"> Deliver quantity*</string>
    <string name="hint_ratio">Ratio*</string>
    <string name="hint_quantity">Quantity*</string>
    <string name="hint_delivery">Date of Delivery*</string>
    <string name="hint_party">Party Name*</string>
    <string name="hint_Production">Production Incharge*</string>

    <string name="hint_remark">Remarks**</string>


    <string name="hint_company"> Company Name*</string>
    <string name="hint_address"> Address*</string>
    <string name="hint_subject">Subject*</string>
    <string name="hint_Concern">Concern Person*</string>
    <string name="hint_Emailaddress">E-mail Address*</string>
    <string name="hint_file">File Number*</string>
    <string name="hint_phone">Phone Number*</string>
    <string name="hint_alternative">Alternative Number*</string>
    <string name="hint_faxnumber">Fax Number*</string>
    <string name="hint_pincode">PinCode*</string>
    <string name="hint_city">city*</string>
    <string name="hint_state">state*</string>
    <string name="hint_contact">Contact Person Name*</string>
    <string name="hint_department">Department*</string>\
    <string name="hint_depart_phon">phone no..*</string>
    <string name="hint_remarkaddress">Remarks**</string>


    <string name="hint_companyname">Company Name*</string>
    <string name="hint_concernperson"> Concern Person*</string>
    <string name="hint_itemname"> Item Name*</string>
    <string name="hint_rate">Rate*</string>
    <string name="hint_date">date*</string>

    <string name="hint_remarkrate">Remarks**</string>


    <string-array name="CATEGORY_TYPE">
        <item>  Admin</item>
        <item>  Hod</item>
        <item>  Store</item>
        <item>  Production</item>
        <item>  Sales</item>
    </string-array>


    <string-array name="select_order_number">
        <item>  501</item>
        <item>  502</item>
        <item>  503</item>
        <item>  504</item>
        <item>  505</item>
    </string-array>

    <string-array name="company_type">
        <item>  Appstar Pvt Ltd</item>
        <item>  Navbharat</item>
        <item>  Pixooz</item>
        <item>  Evolbing Ambience</item>
    </string-array>

    <string-array name="project_manager_type">
        <item>  Select Project Manager</item>
        <item>  Suresh</item>
        <item>  Meghanshu</item>
        <item>  Disha</item>
        <item>  Ramesh</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_complete_rate_master">RateMaster</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_address_master">AddressMaster</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_search_order">SearchOrder</string>
    <string name="title_activity_update_addressmaster">update_addressmaster</string>
    <string name="title_activity_quotation_master">QuotationMaster</string>
    <string name="title_activity_content_updateaddressmaster">content_updateaddressmaster</string>
    <string name="title_activity_updateaddressmaster">Updateaddressmaster</string>
    <string name="title_activity_update_orderform">Update_orderform</string>
    <string name="title_activity_update_order">Update_order</string>
    <string name="title_activity_viewinvoice">ViewInvoice</string>
    <string name="title_activity_quotation">Quotation</string>
    <string name="title_activity_purchase_order">PurchaseOrder</string>
    <string name="title_activity_purchase">Purchase</string>
    <string name="title_activity_created_orderform_admin">Created_orderform_admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_assignedorder_projectmanager">Assignedorder_projectmanager</string>
    <string name="title_activity_accept_assignform">AcceptAssignForm</string>
    <string name="title_activity_accept_ORDER">AcceptedOrder</string>
    <string name="title_activity_Invoice">Invoice</string>
    <string name="title_activity_view_purchase_order">ViewOrder</string>
    <string name="title_activity_view_ORDER">ViewData</string>
    <string name="title_activity_create_ORDER">CreateOrder</string>
    <string name="title_activity_acccept_orderform">Acccept_orderform</string>
    <string name="title_activity_accept_order_form">Accept_order_form</string>
    <string name="title_activity_assign_orderform_admin">Assigned_order</string>
    <string name="title_activity_assignform_admin">Assignform_admin</string>
    <string name="title_activity_accept_assignform_admin">accept_assignform_admin</string>
    <string name="title_activity_admin_accepted_form">AssignedOrderform</string>
    <string name="title_activity_adminaccepted">AcceptedForm</string>
    <string name="title_activity_create_rate_master">Create_rate_master</string>
</resources>
